test: update target Weaviate version and add integration tests